# dpdklibs

./: CMakeLists.txt
.github/workflows/: dunedaq-develop-cpp-ci.yml
cmake/: dpdklibsConfig.cmake.in
docs/: README.md  test_frame_receiver_guide.md
include/dpdklibs/: AvailableCallbacks.hpp  CyclicDataGenerator.hpp  EALSetup.hpp  FlowControl.hpp  Issues.hpp  RTEIfaceSetup.hpp  XstatsHelper.hpp  flow_control.h  ipv4_addr.h  ipv4_addr.hpp
include/dpdklibs/arp/: ARP.hpp
include/dpdklibs/udp/: IPV4Address.hpp  IPV4UDPPacket.hpp  PacketCtor.hpp  Utils.hpp
plugins/: DPDKReader.cpp  DPDKReader.hpp  DPDKReaderModule.cpp  DPDKReaderModule.hpp  NICReader.cpp  NICReader.hpp  NICReceiver.cpp  NICReceiver.hpp  NICSender.cpp  NICSender.hpp  UIOReader.cpp  UIOReader.hpp
plugins/detail/: NICReceiver.hxx
python/dpdklibs/: app_confgen.py  reader_confgen.py  sender_confgen.py
schema/dpdklibs/: confgen.jsonnet  nicreader.jsonnet  nicreader.jsonnet.UPDATE  nicreaderinfo.jsonnet  nicsender.jsonnet  receiverinfo.jsonnet  uioreader.jsonnet  uioreaderinfo.jsonnet
schema/dpdklibs/opmon/: IfaceWrapper.proto  SourceModel.proto
scripts/: bind.sh  dpdklibs_gen.py  dpdklibs_udp_receiver.py  hugepages.sh  kernel.sh  udp_receiver.py  udp_sender.py  unbind.sh  wib_packet_receiver.py  wib_packet_sender.py
src/: CreateSource.hpp  CyclicDataGenerator.cpp  DPDKDefinitions.hpp  EALSetup.cpp  FlowControl.cpp  IfaceWrapper.cpp  IfaceWrapper.hpp  SourceConcept.hpp  SourceModel.hpp  Utils.cpp  flow_control.cpp
src/arp/: ARP.cpp
src/detail/: IfaceWrapper.hxx
src/udp/: IPV4UDPPacket.hpp  PacketCtor.cpp  PacketCtor.hpp  Utils.cpp  Utils.hpp
test/apps/: generate_tfr_settings.cxx  test_arp_response.cxx  test_basic_frame_receiver.cxx  test_basic_frame_transmitter.cxx  test_basic_transmitter.cxx  test_dpdk_stats.cxx  test_eal_app.cxx  test_forward_with_stats.cxx  test_frame_receiver.cxx  test_frame_transmitter.cxx  test_frames.hpp  test_garp.cxx  test_multi_proc.cxx  test_queueperf_app.cxx  test_receiving_payloads.cxx  test_stats_reporting.cxx  test_tde_data_emulator.cxx  test_transmit_and_receive.cxx
unittest/: Conversions_test.cxx  Utils_test.cxx
utils/intel/: 52-hugepages.rules  53-vfio.rules  README.md  limits.conf  setup-100g.sh
utils/mlx/: READOUT.md  setup-100g.sh
